--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <img src="ginger/logo.png" alt="logo da ginger">
     <ul>
       <li>
-       <a href="#">QUEM SOMOS</a>
-       <a href="#">CONTATO</a>
-       <a href="#">ESG</a>
-       <a href="#">ATUAÇÃO</a>
+       <a href="https://ginger.ind.br/#quem-somos">QUEM SOMOS</a>
+       <a href="https://ginger.ind.br/#contato">CONTATO</a>
+       <a href="https://ginger.ind.br/#esg">ESG</a>
+       <a href="https://ginger.ind.br/#segmentos">ATUAÇÃO</a>
      </li>
     </ul>
 
