--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <img src="ginger/logo.png" alt="logo da ginger">
     <ul>
       <li>
-       <a href="https://ginger.ind.br/#quem-somos">QUEM SOMOS</a>
-       <a href="https://ginger.ind.br/#contato">CONTATO</a>
-       <a href="https://ginger.ind.br/#esg">ESG</a>
-       <a href="https://ginger.ind.br/#segmentos">ATUAÇÃO</a>
+       <a href="https://ginger.ind.br/#quem-somos" target="_blank">QUEM SOMOS</a>
+       <a href="https://ginger.ind.br/#contato" target="_blank">CONTATO</a>
+       <a href="https://ginger.ind.br/#esg" target="_blank">ESG</a>
+       <a href="https://ginger.ind.br/#segmentos" target="_blank">ATUAÇÃO</a>
      </li>
     </ul>
 
