--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="ginger/logo.png" />
 
-  <title>Document</title>
+  <title>Nossos Ingredientes</title>
 </head>
 <body>
 
